# chitrasharath_healthcore_ft_ai_1

./: .dockerignore  .example.env  .gitignore  AGENTS.md  README.es.md  README.md  TESTING.md  docker-compose.yml  pyproject.toml
apps/src/: DEVELOPMENT.md  index.html  main.ts  tsconfig.json
apps/talent-pipeline-tracker/: README.md
data/: __init__.py
data/forecast/: __init__.py  clean.py  diagnostics.py  features.py  metrics.py  models_mlforecast.py  models_statsforecast.py  plotting.py
data/pipelines/: README.md  config.py  pipeline.py
docs/: README.md  architecture_proposal.md
docs/data_pipelines/: pipeline-design.md
docs/telemetry/: CONTEXT-healthcore.md  event-schemas.json  telemetry-plan.md  telemetry_eval_criteria.md
healthcore_workspace/: test_runner.py
memory-bank/: conventions.md  decisions.md  progress.md  projectbrief.md  techContext.md
memory-bank/references/: architecture_proposal_plan.md
milestone3_ai_plan/: plan.md
scripts/: README.md  check_ui_dep_versions.py  docker_purge.sh  nightly_export.py  run_diagnostics.py  seed_incidents.py  train_revenue_forecast.py  verify_telemetry_indexes.py  verify_telemetry_indexes.sql
services/: .dockerignore  Dockerfile  __init__.py  celery_app.py  tasks.py
services/api/: .env.example  .example.env  README.md  pyproject.toml
services/api/app/: __main__.py  main.py  seed.py
services/api/app/api/v1/: router.py
services/api/app/core/: config.py  db.py  dependencies.py
services/api/app/domains/async_tasks/: __init__.py  models.py  router.py  schemas.py  service.py
services/api/app/domains/auth/: reset_service.py  reset_tokens.py  router.py  schemas.py  service.py  token.py
services/api/app/domains/incidents/: constants.py  models.py  router.py  schemas.py  service.py
services/api/app/domains/inventory/: models.py  router.py  schemas.py  seed.py
services/api/app/domains/jobs/: __init__.py  job_runner.py  models.py
services/api/app/domains/procurement/suppliers/: router.py  schemas.py  seed_data.py  service.py  store.py
services/api/app/domains/reporting/incidents/: router.py  schemas.py  service.py  store.py
services/api/app/domains/telemetry/: analysis.py  cache.py  indexes.py  mapper.py  models.py  reporting_models.py  repository.py  router.py  schemas.py  seed_reporting.py
services/api/app/domains/users/: router.py  service.py  store.py
services/api/tests/: auth_helpers.py  conftest.py  telemetry_helpers.py  test_async_tasks.py  test_auth.py  test_error_handling.py  test_incidents.py  test_incidents_mgmt.py  test_inventory.py  test_job_runner.py  test_seed_incidents.py  test_suppliers.py  test_telemetry_report.py  test_telemetry_storage.py  test_telemetry_stub.py
tests/jobs/: test_nightly_export.py
tests/pipelines/: test_pipeline.py  test_revenue_data_validation.py  test_revenue_no_leakage.py  test_revenue_pattern_recovery.py  test_revenue_split.py  test_temporal_cv_order.py
uis/: .dockerignore  Dockerfile  start.sh
uis/backoffice/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
uis/incident_analyzer/: .gitignore  README.md  analysis_core.py  analyze.py  eslint.config.mjs  incidents-healthcore.csv  package-lock.json  package.json  pyproject.toml  tsconfig.json
uis/incident_analyzer/app/: layout.tsx  page.tsx
uis/incident_analyzer/components/: analysis-summary.tsx  breakdown-section.tsx  csv-upload.tsx  export-button.tsx  incident-dashboard.tsx  satisfaction-section.tsx
uis/incident_analyzer/components/layout/: incident-header.tsx
uis/incident_analyzer/hooks/: use-incident-analysis.ts
uis/incident_analyzer/lib/: api.ts  types.ts
uis/supplier_directory/: README.md  jest.config.ts  package-lock.json  package.json
uis/website/: .gitignore  jest.config.ts  next.config.ts  package.json  (+1 more)
(+501 files in other folders)
