[project]
name = "healthcore-workspace"
version = "0.1.0"
description = "HealthCore monorepo workspace — pytest runnable from repository root"
requires-python = ">=3.12"
dependencies = [
    "healthcore-api",
]

[project.scripts]
pytest = "healthcore_workspace.test_runner:main"

[tool.uv.sources]
healthcore-api = { workspace = true }

[tool.uv.workspace]
members = ["services/api"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["healthcore_workspace"]

[tool.pytest.ini_options]
testpaths = ["services/api/tests"]
pythonpath = ["services/api"]
