[project]
name = "healthcore-api"
version = "0.1.0"
description = "HealthCore FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "healthcore-incidents-shared",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "tinydb>=4.8.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1",
    "email-validator>=2.0.0",
    "resend>=2.0.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "prefect>=3",
    "celery>=5.6.3",
    "redis>=8.0.1",
    "flower>=2.0.1",
]

[project.scripts]
seed = "app.seed:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.uv.sources]
healthcore-incidents-shared = { path = "../../packages/shared/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
